external-crates/move/crates/move-compiler/tests/move_2024/expansion/unbound_module_alias_in_type.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/expansion/unbound_module_alias_in_type.move:2:16
  │
2 │     fun foo(x: X::T) { x; }
  │                ^ Could not resolve the name 'X'
